feat(favorites): add images to favorite page

--- a/content/blog/transformer/every-think-in-transformer.mdx
+++ b/content/blog/transformer/every-think-in-transformer.mdx
@@ -2,7 +2,7 @@
 title: Everything in Transformers
 description: Let's master transformers.
 date: 2024-11-6
-tags: ['Artifical Intelligence']
+tags: ['AI']
 ---
 
 ![Image Alt Text](./images/transformer.png)
